// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> renders 1`] = `
<DocumentFragment>
  .c0 {
  color: inherit;
  font-size: inherit;
}

<i
    class="mdi mdi-message re-icon c0"
    name="message"
  />
</DocumentFragment>
`;

exports[`<Icon /> renders with passed class name 1`] = `
<DocumentFragment>
  .c0 {
  color: inherit;
  font-size: inherit;
}

<i
    class="bagels mdi mdi-message re-icon c0"
    name="message"
  />
</DocumentFragment>
`;
